[package]
name = "hb_error"
version = "0.1.0"
edition = "2021"
description = "Useful macros and traits for creating and handling errors."
license = "MIT"
homepage = "https://github.com/harrystb/hb"
repository = "https://github.com/harrystb/hb"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dont_use = []

[dependencies]
hb_macros = {path = "../hb_macros"}