[package]
name = "hb_html"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hb_parse = {path = "../hb_parse"}
hb_error = {path = "../hb_error"}

[[example]]
name = "simple"
test = true
edition = "2021"
crate-type = ["bin"]

[dev-dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
