[package]
name = "hb_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = {version = "1.0", features = ["full", "fold", "printing"]} # extra traits to help print
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
hb_parse = {path = "../hb_parse"}