[package]
name = "hb_macros"
version = "0.1.2"
edition = "2021"
description = "Useful macros for creating and handling errors. See hb_error crate."
license = "MIT"
homepage = "https://github.com/harrystb/hb"
repository = "https://github.com/harrystb/hb"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = {version = "1.0", features = ["full", "fold", "printing", "extra-traits"]} # extra traits to help print
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
hb_parse = {path = "../hb_parse"}
hb_error = {path = "../hb_error"}